feat(basket): defined remove from basket method

--- a/src/i18n/en/basket.json
+++ b/src/i18n/en/basket.json
@@ -1,4 +1,5 @@
 {
     "added": "Added to basket",
-    "updated": "Updated basket"
+    "updated": "Updated basket",
+    "removed": "This item removed from basket"
 }
