--- a/src/i18n/tr/basket.json
+++ b/src/i18n/tr/basket.json
@@ -1,4 +1,5 @@
 {
     "added": "Sepete eklendi",
-    "updated": "Sepet güncellendi"
+    "updated": "Sepet güncellendi",
+    "removed": "This item removed from basket"
 }
